[workspace]
members = [
#    "packages/*",
    "contracts/*",
]
resolver = "2"

[profile.release]
debug = false
debug-assertions = false
opt-level = 'z'
codegen-units = 1
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
strip = true

[workspace.dependencies]
cosmwasm-std = "2.0.2"
cw-utils = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw-asset = "3.0.0"
cosmwasm-schema = "2.0.2"
cw-multi-test = { version = "2.0.1", features = ["cosmwasm_1_2"] }
serde = { version = "1.0.127" }
thiserror = { version = "1.0.59" }