[workspace]
members = [
    "packages/*",
    "contracts/*",
    "tests-integration"
]
resolver = "2"

[profile.release]
debug = false
debug-assertions = false
opt-level = 'z'
codegen-units = 1
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
strip = true

[workspace.dependencies]

cw721-tracks-api = { path = "./packages/cw721-tracks-api", default-features = false, version = "0.1.0" }
tracks-auction-api = { path = "./packages/tracks-auction-api", default-features = false, version = "0.1.0" }

cw721-tracks = { path = "./contracts/cw721-tracks", default-features = false, version = "0.1.0" }
tracks-auction = { path = "./contracts/tracks-auction", default-features = false, version = "0.1.0" }

anyhow = "1.0.75"
cosmwasm-std = "1.5.2"
cw-utils = "1.0.3"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw-asset = "3.0.0"
cosmwasm-schema = "2.0.2"
cw-multi-test = { version = "1.1.0" }
serde = { version = "1.0.127" }
strum_macros = "0.26.2"
thiserror = { version = "1.0.59" }
